# nexus

./: .env.example  .gitignore  ABSTRACTION-PLAN.md  CHANGELOG.md  COMMERCIAL-ANALYSIS.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  fix_tests.py  interactive_agent.py  logrotate.conf  nexus-bot.service  nexus-discord.service  nexus-health.service  nexus-processor.service  nexus-telegram.service  nexus-webhook.service  nexus.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  setup-webhook.sh
.github/: copilot-instructions.md
config/: project_config.yaml
docs/: ABSTRACTION-PLAN.md  AGENT-COMPLETION-FORMAT.md  AI-ORCHESTRATOR.md  ARCHITECTURE.md  COMMERCIAL-ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER-COMPOSE.md  NEXUS-CORE-EXTRACTION.md  PRODUCTION-INTEGRATION.md  PROJECT-SCOPED-CHAT-MVP.md  RESTORE.md  USAGE.md  WEBHOOK-QUICKSTART.md  WEBHOOK-REFERENCE.md
examples/: nexus_core_integration.py
scripts/: backfill_tracked_issues.py  build-nexus-services.sh  check-services-status.sh  deploy.sh  health-check.sh  restart-nexus-services.sh  setup_logrotate.py  smoke-deploy.sh
src/: agent_launcher.py  agent_monitor.py  ai_orchestrator.py  alerting.py  analytics.py  audit_store.py  chat_agents_schema.py  config.py  dependencies.py  discord_bot.py  error_handling.py  health_check.py  inbox_processor.py  models.py  nexus_agent_runtime.py  nexus_core_helpers.py  notifications.py  orchestration.py  plugin_runtime.py  project_key_utils.py  rate_limiter.py  report_scheduler.py  state_manager.py  telegram_bot.py  (+2 more)
(+65 files in other folders)
