[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "Thin Nexus profile package that composes nexus-core + Telegram adapter configuration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nexus-core[telegram]",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
py-modules = []
